# dividend_payout

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
app/: streamlit_app.py
src/: dividend_payout.py  dividendportfoliooptimizer.py  optimizer_wrapper.py
