[project]
name = "dividend-portfolio-optimizer"
version = "0.1.0"
description = "An advanced portfolio optimization tool for dividend investors"
authors = [
    {name = "Quinn"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: MIT License",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "streamlit>=1.22.0",
    "lxml>=4.9.0",
    "polars>=0.17.0",
    "cvxpy>=1.3.0",
    "ecos>=2.0.14,<3.0.0",
    "scs>=3.2.0,<4.0.0",
    "osqp>=1.0.0,<2.0.0",
    "clarabel>=0.11.0,<0.12.0",
    "cvxopt>=1.3.0,<2.0.0",
    "bandit (>=1.8.6,<2.0.0)",
]

[project.scripts]
dividend-optimizer = "dividend_payout.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
include = ["dividend_payout"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.parquet"]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"
pip-audit = "^2.9.0"
pre-commit = "^4.3.0"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=./ --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
